crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@328.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT t1.a, t1.c, t2.b, t2.c, t3.a, t3.c FROM prt1_adv t1 LEFT JOIN prt2_adv t2 ON (t1.a = t2.b) LEFT JOIN prt3_adv t3 ON (t1.a = t3.a) WHERE t1.b = 0 ORDER BY t1.a, t2.b, t3.a;"
---
SelectStmt@0..178
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t1"
      Ascii46@9..10 "."
      Ident@10..11 "a"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..17
    ColumnRef@13..17
      Ident@13..15 "t1"
      Ascii46@15..16 "."
      Ident@16..17 "c"
  Ascii44@17..18 ","
  Whitespace@18..19 " "
  ResTarget@19..23
    ColumnRef@19..23
      Ident@19..21 "t2"
      Ascii46@21..22 "."
      Ident@22..23 "b"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..29
    ColumnRef@25..29
      Ident@25..27 "t2"
      Ascii46@27..28 "."
      Ident@28..29 "c"
  Ascii44@29..30 ","
  Whitespace@30..31 " "
  ResTarget@31..35
    ColumnRef@31..35
      Ident@31..33 "t3"
      Ascii46@33..34 "."
      Ident@34..35 "a"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ResTarget@37..41
    ColumnRef@37..41
      Ident@37..39 "t3"
      Ascii46@39..40 "."
      Ident@40..41 "c"
  Whitespace@41..42 " "
  From@42..46 "FROM"
  Whitespace@46..47 " "
  JoinExpr@47..135
    JoinExpr@47..96
      RangeVar@47..58
        Ident@47..55 "prt1_adv"
        Whitespace@55..56 " "
        Alias@56..58
          Ident@56..58 "t1"
      Whitespace@58..59 " "
      Left@59..63 "LEFT"
      Whitespace@63..64 " "
      Join@64..68 "JOIN"
      Whitespace@68..69 " "
      RangeVar@69..80
        Ident@69..77 "prt2_adv"
        Whitespace@77..78 " "
        Alias@78..80
          Ident@78..80 "t2"
      Whitespace@80..81 " "
      On@81..83 "ON"
      Whitespace@83..84 " "
      Ascii40@84..85 "("
      AExpr@85..96
        ColumnRef@85..89
          Ident@85..87 "t1"
          Ascii46@87..88 "."
          Ident@88..89 "a"
        Whitespace@89..90 " "
        Ascii61@90..91 "="
        Whitespace@91..92 " "
        ColumnRef@92..96
          Ident@92..94 "t2"
          Ascii46@94..95 "."
          Ident@95..96 "b"
    Ascii41@96..97 ")"
    Whitespace@97..98 " "
    Left@98..102 "LEFT"
    Whitespace@102..103 " "
    Join@103..107 "JOIN"
    Whitespace@107..108 " "
    RangeVar@108..119
      Ident@108..116 "prt3_adv"
      Whitespace@116..117 " "
      Alias@117..119
        Ident@117..119 "t3"
    Whitespace@119..120 " "
    On@120..122 "ON"
    Whitespace@122..123 " "
    Ascii40@123..124 "("
    AExpr@124..135
      ColumnRef@124..128
        Ident@124..126 "t1"
        Ascii46@126..127 "."
        Ident@127..128 "a"
      Whitespace@128..129 " "
      Ascii61@129..130 "="
      Whitespace@130..131 " "
      ColumnRef@131..135
        Ident@131..133 "t3"
        Ascii46@133..134 "."
        Ident@134..135 "a"
  Ascii41@135..136 ")"
  Whitespace@136..137 " "
  Where@137..142 "WHERE"
  Whitespace@142..143 " "
  AExpr@143..151
    ColumnRef@143..147
      Ident@143..145 "t1"
      Ascii46@145..146 "."
      Ident@146..147 "b"
    Whitespace@147..148 " "
    Ascii61@148..149 "="
    Whitespace@149..150 " "
    AConst@150..151
      Iconst@150..151 "0"
  Whitespace@151..152 " "
  SortBy@152..165
    Order@152..157 "ORDER"
    Whitespace@157..158 " "
    By@158..160 "BY"
    Whitespace@160..161 " "
    ColumnRef@161..165
      Ident@161..163 "t1"
      Ascii46@163..164 "."
      Ident@164..165 "a"
  Ascii44@165..166 ","
  Whitespace@166..167 " "
  SortBy@167..171
    ColumnRef@167..171
      Ident@167..169 "t2"
      Ascii46@169..170 "."
      Ident@170..171 "b"
  Ascii44@171..172 ","
  Whitespace@172..173 " "
  SortBy@173..177
    ColumnRef@173..177
      Ident@173..175 "t3"
      Ascii46@175..176 "."
      Ident@176..177 "a"
  Ascii59@177..178 ";"

