crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@339.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE prt2_adv (a int, b int, c varchar) PARTITION BY RANGE (b);"
---
CreateStmt@0..71
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "prt2_adv"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  ColumnDef@23..28
    Ident@23..24 "a"
    Whitespace@24..25 " "
    TypeName@25..28
      IntP@25..28 "int"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ColumnDef@30..35
    Ident@30..31 "b"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..46
    Ident@37..38 "c"
    Whitespace@38..39 " "
    TypeName@39..46
      Varchar@39..46 "varchar"
  Ascii41@46..47 ")"
  Whitespace@47..48 " "
  PartitionSpec@48..69
    Partition@48..57 "PARTITION"
    Whitespace@57..58 " "
    By@58..60 "BY"
    Whitespace@60..61 " "
    Range@61..66 "RANGE"
    Whitespace@66..67 " "
    Ascii40@67..68 "("
    PartitionElem@68..69
      Ident@68..69 "b"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

